--- a/index.css
+++ b/index.css
@@ -13,15 +13,53 @@
    input,select{vertical-align:middle}
    li{list-style:none}
    
-   /* ---- base ---- */
    
-   *{
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
-     scroll-behavior: smooth;
-     list-style: none;
-     text-decoration: none;
+   /* ---- base ---- */
+
+   /* ---- Table ----*/
+
+    table {
+        margin: 0 auto;
+        font-size: large;
+        border: 1px solid rgb(21, 195, 201);
+    }
+
+    h1 {
+        text-align: center;
+        color: #f7faf7;
+        font-size: 100px;
+        font-family: 'Gill Sans', 
+            'Gill Sans MT', ' Calibri', 
+            'Trebuchet MS', 'sans-serif';
+    }
+
+    td {
+        background-color: #E4F5D4;
+        border: 1px solid rgb(250, 248, 248);
+    }
+
+    th,
+    td {
+        font-weight: bold;
+        border: 1px solid #f7faf7;
+        padding: 70px;
+        text-align: center;
+        color:rgb(250, 248, 248);
+        font-size: 40px;
+    }
+
+    td {
+        font-weight: lighter;
+    }
+      
+
+      *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        scroll-behavior: smooth;
+        list-style: none;
+        text-decoration: none;
    
      /* font-family: 'Montserrat', sans-serif; */
    }
@@ -144,7 +182,8 @@
      display:block;
      vertical-align:bottom;
    }
-   
+
+
    
    /* ---- stats.js ---- */
    
