--- a/index.css
+++ b/index.css
@@ -20,32 +20,32 @@
 
     table {
         margin: 0 auto;
-        font-size: large;
+        font-size: medium;
         border: 1px solid rgb(21, 195, 201);
     }
 
     h1 {
         text-align: center;
         color: #f7faf7;
-        font-size: 100px;
+        font-size: 80px;
         font-family: 'Gill Sans', 
             'Gill Sans MT', ' Calibri', 
             'Trebuchet MS', 'sans-serif';
     }
 
     td {
-        background-color: #E4F5D4;
+        background-color: #e4f5d422;
         border: 1px solid rgb(250, 248, 248);
     }
 
-    th,
+    th,p,
     td {
         font-weight: bold;
         border: 1px solid #f7faf7;
-        padding: 70px;
+        padding: 10px;
         text-align: center;
         color:rgb(250, 248, 248);
-        font-size: 40px;
+        font-size: 20px;
     }
 
     td {
