--- a/index.css
+++ b/index.css
@@ -221,6 +221,6 @@
      background-image: url('');
      background-size: cover;
      background-position: 50% 50%;
-     background-repeat: repeat;
+     background-repeat: no-repeat;
    }
    
