--- a/index.css
+++ b/index.css
@@ -19,15 +19,32 @@
    /* ---- Table ----*/
 
    button {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    padding: 0.7em;
+    border-radius: 0.5em;
+    background: #fff;
+    border: none;
+    font-weight: bold;
     text-align: center;
-    float: left;
-    background-color: #f7faf7; /* Green */
-    border: 1px black;
-    color: rgb(3, 3, 3);
-    padding: 5px 12px;
+    background-color: #fff; /* Green */
     text-decoration: none;
-    display: inline-block;
     font-size: 12px;
+    position: relative; /* or absolute */
+    top:0%;
+    left: 0%;
+    text-transform: uppercase;
+  }
+
+  button:hover {
+    cursor: pointer;
+    background: #1b9bff;
+    transition: .5s;
+  }
+
+  h1:title{
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    padding: 0.7em;
+    border-radius: 0.5em;
   }
 
     table {
@@ -43,6 +60,7 @@
         font-family: 'Gill Sans', 
             'Gill Sans MT', ' Calibri', 
             'Trebuchet MS', 'sans-serif';
+        position:relative;
     }
 
     td {
@@ -50,7 +68,13 @@
         border: 1px solid rgb(250, 248, 248);
     }
 
-    th,p,td {
+    p {
+      font-weight: bold;
+      text-align: center;
+      color:#fff;
+    }
+
+    th,td {
         font-weight: bold;
         border: 1px solid #f7faf7;
         padding: 10px;
